--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,4 +1,4 @@
-
+{% load staticfiles %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>Album example · Bootstrap</title>
+    <title>Blog Project</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -46,15 +46,15 @@
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Addendum</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Addendum</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" href="#">Twitter</a>
-                <a class="nav-item nav-link" href="#">Resume</a>
-                <a class="nav-item nav-link active" href="#">Blog</a>
+                <a class="nav-item nav-link" href="http://twitter.com">Twitter</a>
+                <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
+                <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
               </div>
             </div>
           </nav>
@@ -69,7 +69,7 @@
         <hr/>
         {% for blogs in blogs.all %}
         <p>
-            <a href=""><h3>{{ blogs.title }}</h3></a>
+            <a href="{% url 'detail' blogs.pk %}"><h3>{{ blogs.title }}</h3></a>
             {{blogs.pub_date_pretty}}
             <br/>
             <img src='{{blogs.image.url}}' height="100" width="100" class='img-fluid'/>
